NS-41 Add style for documents view and fix some align issues with repertoire view

--- a/src/scss/components/repertuaar.scss
+++ b/src/scss/components/repertuaar.scss
@@ -82,6 +82,7 @@
 }
 .operations {
     display: flex;
+    justify-content: center;
 }
 .music-options {
     display: flex;
