--- a/src/scss/components/single-repertuaar.scss
+++ b/src/scss/components/single-repertuaar.scss
@@ -86,11 +86,10 @@
 
 }
 .edit-post-button{
-    width:50%;
     background-color: $color-primary-blue;
     color: $color-white;
     border-radius: 5px;
-    padding: 10px 16px;
+    padding: 12px 16px;
     border:none;
     pointer-events: all;
     cursor: pointer;
@@ -106,11 +105,17 @@
 .acf-form-submit {
     display: flex;
     justify-content: center;
+  
 }
 .acf-form {
     max-height: 500px;
     overflow-y: auto;
+    font-size: $font-size-small;
+    line-height: $line-height-small;
     @media (max-width:$bp-sm-min) {
         height: 70vh;
+    }
+    & a {
+        color:$color-primary-blue;
     }
 }
