--- a/src/scss/components/tables/documents-table.scss
+++ b/src/scss/components/tables/documents-table.scss
@@ -3,34 +3,21 @@
         color: $color-primary-blue;
         display: flex;
         align-items: center;
-        margin-right: 20px;
-        padding: 2px;
+        padding: 0 10px;
         & svg {
-            margin-right: 5px;
             font-size: 24px;
             padding: 2px;
-        }
-        @media (max-width: $bp-sm-min){
-            margin-right: 20px;
         }
     }
         .clickable-link-delete{
             color: $color-red;
             display: flex;
             align-items: center;
-            margin-right: 20px;
             font-size: 24px;
             padding: 2px;
             transition: 0.5s;
             &:hover {
                 color:rgba($color: $color-red, $alpha: 0.5);
-            }
-            & svg {
-                margin-right: 5px;
-                
-            }
-            @media (max-width: $bp-sm-min){
-                margin-right: 20px;
             }
         }
     .document-table-icon{
@@ -50,6 +37,7 @@
         text-decoration: none;
         color: $color-secondary-blue;
         display: flex;
+        align-items: center;
     }
 
     & .naiskoor-table__body td {
