--- a/src/scss/helpers/typography.scss
+++ b/src/scss/helpers/typography.scss
@@ -94,3 +94,7 @@
         top:4px;
     }
 }
+.capitalize-text {
+    text-transform: capitalize;
+    text-align: center;
+}
